Changes: delete eligibility changes and fixes
